# django-profanity-check

./: .coveragerc  .gitignore  .travis.yml  README.md  apps.py  pyproject.toml  test_app.py  test_profanity_check.py
profanity/: apps.py
profanity/templatetags/: profanity.py
templatetags/: profanity_check.py
